nginx still not running

--- a/testdocker2/Dockerfile
+++ b/testdocker2/Dockerfile
@@ -1,9 +1,9 @@
-From ubuntu
+From python:3.7-stretch
+
 COPY ./app /app
 
 RUN apt update 
 RUN apt install -y postgresql postgresql-contrib 
-RUN apt install -y python3 python3-pip 
 RUN pip3 install uvicorn fastapi[all]
 ENV LC_ALL=C.UTF-8
 ENV LANG=C.UTF-8
