--- a/nginx-proxy/default.conf
+++ b/nginx-proxy/default.conf
@@ -1,22 +1,17 @@
 server {
     listen       80;
-    server_name  localhost;
+    server_name welcome.app;
 
     location / {
-        root   /usr/share/nginx/html;
-        index  index.html index.htm;
-    }
-    location /web1 {
-        proxy_pass https://image1:8080;
-    }
+        proxy_pass http://127.0.0.1:8080;
 
-    location /web2 {
-        proxy_pass https://nervous_archimedes:8081;
-    }
+}
 
+server {
+    listen       80;
+    server_name pekochan.me;
 
-    # error_page   500 502 503 504  /50x.html;
-    # location = /50x.html {
-    #     root   /usr/share/nginx/html;
-    # }
+    location / {
+        proxy_pass http://127.0.0.1:8080;
+
 }
