--- a/testdocker1/Dockerfile
+++ b/testdocker1/Dockerfile
@@ -1,10 +1,8 @@
-# From python:3.6-alpine
-From ubuntu
+From python:3.7-stretch
 COPY ./app /app
 
 RUN apt update 
 RUN apt install -y postgresql postgresql-contrib 
-RUN apt install -y python3 python3-pip 
 RUN pip3 install uvicorn fastapi[all]
 ENV LC_ALL=C.UTF-8
 ENV LANG=C.UTF-8
